fixed problems after merge